dystopia/frontend/kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: "default/panicboat-application"
    spec:
      containers:
        - name: frontend
          image: ghcr.io/panicboat/monorepo/frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
